# wasm-game-server-demo

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/assets/: index.html
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
