[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"

[profile.dev]
strip = "symbols"
